--- a/stylesheets/mhstyle.css
+++ b/stylesheets/mhstyle.css
@@ -83,9 +83,15 @@ img {
     grid-area: c;
 }
 
-h2,h1 {
+.box-option {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+h2,h1,h3,h4,h5 {
     margin-top: 0;
     margin-bottom: 0;
+    vertical-align: middle;
 }
 
 .material-icons.md-48 {
@@ -101,3 +107,63 @@ h2,h1 {
             'c';
     }
 }
+
+/* The switch - the box around the slider */
+.switch {
+    vertical-align: middle;
+    position: relative;
+    display: inline-block;
+    width: 30px;
+    height: 17px;
+}
+  
+  /* Hide default HTML checkbox */
+  .switch input {display:none;}
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+  
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 13px;
+    width: 13px;
+    left: 2px;
+    bottom: 2px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(13px);
+    -ms-transform: translateX(13px);
+    transform: translateX(13px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 17px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
