--- a/stylesheets/mhstyle.css
+++ b/stylesheets/mhstyle.css
@@ -46,7 +46,7 @@ img {
     grid-template-columns: repeat(6, 1fr);
     grid-template-areas:
         ". . a b . ."
-        ". . c c . .";
+        ". . c d . .";
 }
 
 .box {
@@ -83,9 +83,42 @@ img {
     grid-area: c;
 }
 
+.box-d {
+    grid-area: d;
+}
+
 .box-option {
     display: inline-block;
     vertical-align: middle;
+}
+
+.box-option-sharpness {
+    padding-bottom: .8rem;
+}
+
+.box-option-sharpness select{
+    font-size: 1.4rem;
+    /* background: rgba(0,0,0,0.3);
+    color:#FFF; */
+    /* text-shadow:0 1px 0 rgba(0,0,0,0.4); */
+}
+select option.sharp-red {
+    background: rgb(255, 100, 100);
+}
+select option.sharp-orange {
+    background: rgb(255, 175, 90);
+}
+select option.sharp-yellow {
+    background: rgb(255, 225, 100);
+}
+select option.sharp-green {
+    background: rgb(60, 175, 60);
+}
+select option.sharp-blue {
+    background: rgb(90, 90, 255);
+}
+select option.sharp-white {
+    background: rgb(255, 255, 255);
 }
 
 h2,h1,h3,h4,h5 {
@@ -98,15 +131,8 @@ h2,h1,h3,h4,h5 {
     font-size: 48px; 
 }
 
-@media(max-width: 700px) {
-    .boxes {
-        grid-template-columns: 1fr;
-        grid-template-areas:
-            'a'
-            'b'
-            'c';
-    }
-}
+
+
 /* The switch - the box around the slider */
 .switch {
     vertical-align: middle;
@@ -166,3 +192,17 @@ h2,h1,h3,h4,h5 {
   .slider.round:before {
     border-radius: 50%;
   }
+
+  @media(max-width:700px) {
+    .material-icons.md-48 {
+        display: none;
+    }
+    .boxes {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            'a'
+            'b'
+            'c'
+            'd';
+    }
+}
