--- a/css/heythere.css
+++ b/css/heythere.css
@@ -15,7 +15,7 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
-    background: url('img/coffee_small.jpg');
+    background: url('../img/coffee_small.jpg');
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
