--- a/css/heythere.css
+++ b/css/heythere.css
@@ -17,6 +17,7 @@ body {
     padding: 0;
     background: url('../img/coffee_small.jpg') no-repeat fixed center;
     background-size: cover;
+    min-height: 100%;
     font-family: Helvetica, sans-serif;
     font-size: 1.4em;
     color: var(--darkText);
