--- a/css/heythere.css
+++ b/css/heythere.css
@@ -17,6 +17,9 @@ body {
     margin: 0;
     padding: 0;
     background: url('../img/coffee_small.jpg') no-repeat fixed center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
     overflow: hidden;
     font-family: Helvetica, sans-serif;
