--- a/css/heythere.css
+++ b/css/heythere.css
@@ -117,6 +117,10 @@ body {
 }
 
 @media(max-width:696px) {
+    html {
+        height: 100vh; /* set viewport constraint */
+        min-height: 100%; /* enforce height */
+    }
     .info-card {
         left: 10vw;
         margin-left: auto;
