--- a/css/heythere.css
+++ b/css/heythere.css
@@ -44,16 +44,19 @@ a:visited {
 
 .info-card {
     position: fixed;
-    bottom: -60vh;
+    bottom: -50vh;
     left: 10vw;
-    height: 60vh;
+    height: 50vh;
     width: 20vw;
     min-width: 300px;
     /* padding: 10px; */
     border-radius: 0px 12px 0 0;
     box-shadow: var(--shadow);
     background: var(--secondary);
-    display: block;
+    display: inline-block;
+    text-overflow: ellipsis;
+    box-sizing: border-box;
+    /* overflow: hidden; */
     transition: bottom 700ms ease-in-out 20ms,
                 opacity 700ms ease-in-out 20ms;
     opacity: .37;
@@ -79,7 +82,7 @@ a:visited {
 
 .info-text {
     padding: 0 0;
-    margin: 20px 20px 40px 20px;
+    margin: 0px 20px 40px 20px;
     text-align: left;
     border-bottom: 1px solid var(--darkTransparent);
 }
@@ -167,20 +170,19 @@ a:visited {
         left: 10vw;
         margin-left: auto;
         width: 80vw;
-        opacity: 1;
     }
     .info-text {
-        font-size: 1.0em;
+        font-size: .6em;
     }
     .main-text {
-        font-size: 1.8em;
+        font-size: 1.4em;
         height: 30vh;
         width: 80vw;
     }
     #date {
-        font-size: 1.0em;
+        font-size: 1.4em;
     }
     #clock {
-        font-size: 2.0em;
+        font-size: 2.4em;
     }
 }
