--- a/css/heythere.css
+++ b/css/heythere.css
@@ -6,6 +6,7 @@
 --link: rgb(177, 104, 37);
 --dark: #333;
 --darkTransparent: rgba(33,33,33, 0.4);
+--darkOverlay: rgba(33,33,33, 0.2);
 --darkText: rgba(0, 0, 0, 0.87);
 --light: #ffffff;
 --lightTransparent: rgba(255,255,255, 0.87);
@@ -27,6 +28,30 @@ body {
     font-family: Helvetica, sans-serif;
     font-size: 1.4em;
     color: var(--darkText);
+}
+
+.bgcover {
+    z-index: -1;
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: var(--darkOverlay);
+}
+
+.top-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    text-align: center;
+    color: var(--light);
+    margin: auto;
+    /* font-weight: bold; */
+    font-size: .6em;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    user-select: none;
+    -moz-user-select: none;
 }
 
 a {
